<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutCreateQuizMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="29dp">

    <TextView
        android:id="@+id/tvTitleCreateQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_quiz_final_title"
        android:textColor="@color/black_70"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUploadAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/create_quiz_final_upload_avatar"
        android:textAllCaps="true"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleCreateQuiz" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPickImage"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUploadAvatar"
        app:shapeAppearanceOverlay="@style/ShapeImage10"
        app:srcCompat="@drawable/ic_photo" />


    <TextView
        android:id="@+id/tvChooseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/create_quiz_final_add_category"
        android:textAllCaps="true"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPickImage" />

    <TextView
        android:id="@+id/autoCategoriesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_default_edittext"
        android:clipToPadding="false"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:popupBackground="@drawable/bg_spinner"
        android:spinnerMode="dropdown"
        android:text="@string/create_quiz_final_add_category"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChooseCategory" />

    <TextView
        android:id="@+id/tvChooseCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_quiz_final_add_country"
        android:textAllCaps="true"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoCategoriesSpinner" />

    <TextView
        android:id="@+id/autoCountriesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_default_edittext"
        android:clipToPadding="false"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:popupBackground="@drawable/bg_spinner"
        android:spinnerMode="dropdown"
        android:text="@string/create_quiz_final_add_country"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChooseCountry" />


    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/create_quiz_final_save"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>